#9 - remove post-velious maps from index page

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     }
   </style>
   <meta name="description"
-        content="EQ Atlas: Free digital maps and guides to travelling the world of EverQuest Classic.">
+        content="EQ Atlas: Free digital maps and guides to travelling the world of EverQuest Classic & Project1999.">
   <meta name="keywords"
         content="everquest, maps, atlas, travel guide, monsters, NPC, character, news, links, guide, eq, project1999, mirror">
   <link rel="icon"
@@ -53,12 +53,11 @@
     <tr valign="top">
       <td colspan="3">
         <div class="top-menu">
-          <span>Home</span> | <a href="/atlas.html">Classic Atlas</a>
+          <span>Home</span> | <a href="/atlas.html">Ye Old Atlas</a>
         </div>
         <div class="top-menu">
           <a href="#antonica">Antonica</a> | <a href="#faydwer">Faydwer</a> | <a href="#odus">Odus</a>
-          | <a href="#kunark">Kunark</a> | <a href="#velious">Velious</a> | <a href="#luclin">Luclin</a>
-          | <a href="#planes">Planes</a><br><br>
+          | <a href="#kunark">Kunark</a> | <a href="#velious">Velious</a><br><br>
         </div>
 
         <table cellspacing=20 border="1" width=90% align="center">
@@ -322,126 +321,10 @@
               </div>
             </td>
           </tr>
-          <tr>
-            <th align=center colspan="4"><h2><a name="luclin">LUCLIN</a></h2></th>
-          </tr>
-          <tr class="content-list">
-            <td align=center colspan="2">
-              <p><b>Zone Connection Maps </b></p>
-
-              <div class="content">
-                <a href="luclinzones.html">Luclin</a>
-              </div>
-            </td>
-            <td align=center colspan="2">
-              <p><b>Cities</b></p>
-
-              <div class="content">
-                <a href="bazaar.html">The Bazaar</a><br>
-                <a href="kattacastellum.html">Katta Castellum</a><br>
-                <a href="nexus.html">Nexus</a><br>
-                <a href="sanctusseru.html">Sanctus Seru</a><br>
-                <a href="shadowhaven.html">Shadow Haven</a><br>
-                <a href="sharvahl.html">Shar Vahl</a>
-              </div>
-            </td>
-          </tr>
-          <tr class="sub-th">
-            <th align=center colspan=4>
-              <h4>Zones</h4>
-            </th>
-          </tr>
-          <tr class="content-list">
-            <td align=center colspan=2>
-              <div class="content">
-                <a href="acryliacaverns.html">Acrylia Caverns</a><br>
-                <a href="akhevaruins.html">Akheva Ruins</a><br>
-                <a href="dawnshroudpeaks.html">Dawnshroud Peaks</a><br>
-                <a href="thedeep.html">The Deep</a><br>
-                <a href="echocaverns.html">Echo Caverns</a><br>
-                <a href="fungusgrove.html">Fungus Grove</a><br>
-                <a href="thegrey.html">The Grey</a><br>
-                <a href="griegsend.html">Grieg's End</a><br>
-                <a href="grimlingforest.html">Grimling Forest</a><br>
-                <a href="hollowshademoor.html">Hollowshade Moor</a><br>
-                <a href="maidenseye.html">Maiden's Eye</a>
-              </div>
-            </td>
-            <td align=center colspan=2>
-              <div class="content">
-                <a href="marusseru.html">Marus Seru</a><br>
-                <a href="monsletalis.html">Mons Letalis</a><br>
-                <a href="netherbianlair.html">Netherbian Lair</a><br>
-                <a href="paludalcaverns.html">Paludal Caverns</a><br>
-                <a href="scarletdesert.html">Scarlet Desert</a><br>
-                <a href="shadeweaversthicket.html">Shadeweaver's Thicket</a><br>
-                <a href="ssraeshzatemple.html">Ssraeshza Temple</a><br>
-                <a href="tenebrousmtns.html">Tenebrous Mountains</a><br>
-                <a href="twilightsea.html">Twilight Sea</a><br>
-                <a href="umbralplains.html">Umbral Plains</a><br>
-                <a href="vexthal.html">Vex Thal</a>
-              </div>
-            </td>
-          </tr>
-          <tr>
-            <th align=center colspan=4><h2><a name="planes">PLANES</a></h2></th>
-          </tr>
-          <tr class="content-list">
-            <td align=center colspan=2>
-              <div class="content">
-                <a href="planeofskymap.html">Plane of Sky</a><br>
-                <a href="planeoffearmap.html">Plane of Fear</a><br>
-                <a href="planeofgrowthmap.html">Plane of Growth</a>
-              </div>
-            </td>
-            <td align=center colspan=2>
-              <div class="content">
-                <a href="planeofhatemap.html">Plane of Hate</a><br>
-                <a href="images/planeofmischief.gif">Plane of Mischief</a>
-              </div>
-            </td>
-          </tr>
-          <tr>
-            <th align=center colspan=4><h2>PLANES OF POWER</h2></th>
-          </tr>
-          <tr class="content-list">
-            <td align=center colspan=2 valign="top">
-              <div class="content">
-                <a href="bastionofthundermap.html">Bastion of Thunder</a><br>
-                <a href="lairofterristhulemap.html">Crypt of Terris Thule</a> (a.k.a. Plane of Nightmare B)<br>
-                <a href="burninglandsmap.html">Doomfire, the Burning Lands</a> (a.k.a. Plane of Fire)<br>
-                <a href="fortressofzekmap.html">Drunder, Fortress of Zek</a> (a.k.a. Plane of Tactics)<br>
-                <a href="eryslaimap.html">Eryslai the Kingdom of Wind</a> (a.k.a. Plane of Air)<br>
-                <a href="hallsofhonormap.html">Halls of Honor</a><br>
-                <a href="planeofdiseasemap.html">Plane of Disease</a><br>
-                <a href="images/planeofinnovation.jpg">Plane of Innovation</a><br>
-                <a href="images/planeofjustice.jpg">Plane of Justice</a><br>
-                <a href="planeofknowledge.html">Plane of Knowledge</a><br>
-                <a href="images/planeofnightmare.jpg">Plane of Nightmare</a><br>
-              </div>
-            </td>
-            <td align=center colspan=2 valign="top">
-              <div class="content">
-                <a href="planeofstormsmap.html">Plane of Storms</a><br>
-                <a href="images/planeoftime.png">Plane of Time</a><br>
-                <a href="images/planeoftimeb.png">Plane of Time B</a><br>
-                <a href="planeoftormentmap.html">Plane of Torment</a><br>
-                <a href="images/planeoftranquility.gif">Plane of Tranquility</a><br>
-                <a href="images/planeofvalor.gif">Plane of Valor</a><br>
-                <a href="planeofwatermap.html">Reef of Coirnav</a> (a.k.a. Plane of Water)<br>
-                <a href="cryptofdecaymap.html">Ruins of Lxanvom</a> (a.k.a. Crypt of Decay)<br>
-                <a href="templeofmarrmap.html">Temple of Marr</a> (a.k.a. Halls of Honor B)<br>
-                <a href="solusekrostowermap.html">Tower of Solusek Ro</a><br>
-                <a href="images/planeofearth.gif">Vegarlson the Earthen Badlands</a> (a.k.a. Plane of Earth)<br>
-                <a href="images/planeofearthb.gif">Ragrax, Stronghold of the Twelve</a> (a.k.a. Plane of Earth B)
-              </div>
-            </td>
-          </tr>
         </table>
       </td>
     </tr>
   </table>
-  <p align="center">Copyright 2015 EQAtlas.ca</p>
 
   <table cellspacing=1 border=0 width=90% align="center">
     <tr>
@@ -453,19 +336,24 @@
           <br/><br/>
 
           <h1><a name=notes>Notes</a></h1>
+          <hr/>
+          <h2>Maps Post-Velious Removed</h2>
+          <p class="date">Oct 10, 2016</p>
+          <p>We decided to remove any maps that were Post-Velious as they aren't used for the classic / Project1999 experience anyway. Less is more, they say ;-)</p>
+          <p>You can still access them via the "<a href="/atlas.html">Ye Old Atlas</a>" page.</p>
+          <p class="signature">- Tydel Shadow`Shifter</p>
+          <hr/>
           <h2>EQAtlas.ca is now fully encrypted!</h2>
           <p class="date">Nov 6, 2015</p>
           <p>At EQAtlas.ca we are proud to support initiatives that focus on internet freedom and safety - as a result we've enabled full encryption for our audience. Enjoy!</p>
-          <p>Our encryption certificates are provided by Let's Encrypt - for more information on this exciting initiatve, visit: <a href="https://letsencrypt.org/">letsencrypt.org</a></p>
+          <p>Our encryption certificates are provided by Let's Encrypt - for more information on this exciting initiatve, visit: <a href="https://letsencrypt.org/" target="_blank">letsencrypt.org</a></p>
+          <p class="signature">- Sacraxiles Shadow`Spirit</p>
           <br/>
           <hr>
-          <br/>View Source: <a href="https://github.com/race/eqatlas" target="_blank">https://github.com/race/eqatlas</a>
-          <br/>Original mirror from: <a href="https://github.com/ebabel-eu/eqatlas" target="_blank">https://github.com/ebabel-eu/eqatlas</a>
+          <br/>View Source: <a href="https://github.com/EQAtlas/eqatlas" target="_blank">https://github.com/EQAtlas/eqatlas</a>
           <br/><br/>
           <br/>Issue Management: <a href="https://waffle.io/race/eqatlas"
                                     target="_blank">https://waffle.io/race/eqatlas</a>
-          <br/><br/>
-          - Sacraxiles @ P99
           <br/><br/><br/><br/>
         </div>
 
