--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <tr>
       <td valign="top" colspan="3">
         <a href="index.html">
-          <img src="images/logo.gif" width="301" height="104" vspace="10" alt="EQ Atlas" align="left" border="0">
+          <img src="images/eqatlas-logo.png" width="300" vspace="10" alt="EQ Atlas" align="left" border="0">
         </a>
       </td>
     </tr>
