[NoID] - minor copy updates and style for signatures

--- a/index.html
+++ b/index.html
@@ -30,6 +30,18 @@
     .footnotes {
       font-family: Arial, Helvetica, sans-serif;
     }
+    .signature-de {
+      font-size: 21px;
+      font-family: 'Great Vibes', Helvetica, sans-serif;
+      color: #000;
+      text-shadow: 4px 4px 3px rgba(0,0,0,0.1);
+    }
+    .signature-ik {
+      font-size: 21px;
+      font-family: 'Arizonia', Helvetica, sans-serif;
+      color: #8A0707;
+      text-shadow: 4px 4px 0px rgba(0,0,0,0.1);
+    }
   </style>
   <meta name="description"
         content="EQ Atlas: Free digital maps and guides to travelling the world of EverQuest Classic & Project1999.">
@@ -340,14 +352,14 @@
           <h2>Maps Post-Velious Removed</h2>
           <p class="date">Oct 10, 2016</p>
           <p>We decided to remove any maps that were Post-Velious as they aren't used for the classic / Project1999 experience anyway. Less is more, they say ;-)</p>
-          <p>You can still access them via the "<a href="/atlas.html">Ye Old Atlas</a>" page.</p>
-          <p class="signature">- Tydel Shadow`Shifter</p>
+          <p>For those who don't want to embrace the Lord of Hate, you can still access them via the "<a href="/atlas.html">Ye Old Atlas</a>" page.</p>
+          <p class="signature-de">- Tydel Shadow`Shifter</p>
           <hr/>
           <h2>EQAtlas.ca is now fully encrypted!</h2>
           <p class="date">Nov 6, 2015</p>
-          <p>At EQAtlas.ca we are proud to support initiatives that focus on internet freedom and safety - as a result we've enabled full encryption for our audience. Enjoy!</p>
-          <p>Our encryption certificates are provided by Let's Encrypt - for more information on this exciting initiatve, visit: <a href="https://letsencrypt.org/" target="_blank">letsencrypt.org</a></p>
-          <p class="signature">- Sacraxiles Shadow`Spirit</p>
+          <p>Here at EQAtlas.ca, we are proud to sssupport initiativesss that focusss on internet freedom and sssafety - as a ressult we've enabled full encryption for our audience. Now even you can join The Faceless in the Temple of Terror. Enjoy!</p>
+          <p>Our encryption certificatesss are provided by Let's Encrypt - for more information on this exciting initiatve, visit: <a href="https://letsencrypt.org/" target="_blank">letsencrypt.org</a></p>
+          <p class="signature-ik">- Sacraxiles Shadow`Spirit</p>
           <br/>
           <hr>
           <br/>View Source: <a href="https://github.com/EQAtlas/eqatlas" target="_blank">https://github.com/EQAtlas/eqatlas</a>
@@ -378,6 +390,8 @@
     ga('send', 'pageview');
 
   </script>
+  <link href='http://fonts.googleapis.com/css?family=Great+Vibes' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Arizonia' rel='stylesheet' type='text/css'>
 </body>
 
 </html>
