--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
     .footnotes {
       font-family: Arial, Helvetica, sans-serif;
     }
+    .signature-we {
+      font-size: 21px;
+      font-family: 'Great Vibes', Helvetica, sans-serif;
+      color: #339933;
+      text-shadow: 4px 4px 3px rgba(0,0,0,0.1);
+    }
     .signature-de {
       font-size: 21px;
       font-family: 'Great Vibes', Helvetica, sans-serif;
@@ -349,6 +355,11 @@
 
           <h1><a name=notes>Notes</a></h1>
           <hr/>
+          <h2>Broken Links Fixed</h2>
+          <p class="date">Mar 5, 2020</p>
+          <p>We noticed we had a few pages giving an error or broken links, these should be correctly removed/cleaned up now.</p>
+          <p class="signature-we">- Serynn Dipity</p>
+          <hr/>
           <h2>Maps Post-Velious Removed</h2>
           <p class="date">Oct 10, 2016</p>
           <p>We decided to remove any maps that were Post-Velious as they aren't used for the classic / Project1999 experience anyway. Less is more, they say ;-)</p>
@@ -364,8 +375,6 @@
           <hr>
           <br/>View Source: <a href="https://github.com/EQAtlas/eqatlas" target="_blank">https://github.com/EQAtlas/eqatlas</a>
           <br/><br/>
-          <br/>Issue Management: <a href="https://waffle.io/race/eqatlas"
-                                    target="_blank">https://waffle.io/race/eqatlas</a>
           <br/><br/><br/><br/>
         </div>
 
