--- a/index.html
+++ b/index.html
@@ -355,6 +355,24 @@
 
           <h1><a name=notes>Notes</a></h1>
           <hr/>
+          <h2>Nav. Improvements Under Development</h2>
+          <p class="date">Aug 15, 2020</p>
+          <p>EQAtlas.ca is undergoing a bunch of backend work to help template-ize our archaeic mapbook. The design will remain intact for the exhilerating nostalgia of classic EQAtlas &lt;3. With the maps templated, headers and pages can be dynamically created by the server so we'll be able to link to connected zones directly from the map pages. This means as you travel from Butcherblock Mountains to Kaladim you want need to go back to the Index page - you'll be able to flow directly to the next map from your current map!</p>
+          <p>We are going to start with some of the most commonly used zones and expand from there:
+            <ul>
+              <li>Greater Faydark</li>
+              <li>Butcherblock Mountains</li>
+              <li>Kaladim (North and South)</li>
+              <li>West Commonlands</li>
+              <li>East Commonlands</li>
+              <li>East Karana</li>
+              <li>West Karana</li>
+              <li>North Karana</li>
+            </ul>
+          </p>
+
+          <p class="signature-we">- Serynn Dipity</p>
+          <hr/>
           <h2>Broken Links Fixed</h2>
           <p class="date">Mar 5, 2020</p>
           <p>We noticed we had a few pages giving an error or broken links, these should be correctly removed/cleaned up now.</p>
