[NoID] - initial templating structure, converted EC and WC to templates, added adjacent zones to map files

--- a/atlas.html
+++ b/atlas.html
@@ -14,14 +14,14 @@
   </style>
 <meta name="description" content="Classic view of EQAtlas: Free digital maps and guides to travelling the world of EverQuest Classic.">
 <meta name="keywords" content="everquest, maps, atlas, travel guide, monsters, NPC, character, news, links, guide, eq, project1999, mirror">
-<link rel="icon" 
-      type="image/png" 
+<link rel="icon"
+      type="image/png"
       href="favicon.ico">
 </head>
 
 <body bgcolor="#FFFFFF" background="images/bg.jpg" topmargin=0 rightmargin=0 leftmargin=0 marginheight=0 marginwidth=0>
 <table width="100%" border="0" cellpadding="0" cellspacing="0" height="10">
-  <tr> 
+  <tr>
     <td></td>
 </table>
 <table width="8" border="0" cellpadding="0" cellspacing="0" height="1000" align="right">
@@ -30,7 +30,7 @@
   </tr>
 </table>
 <table width="8" border="0" cellpadding="0" cellspacing="0" height="1000" align="left">
-  <tr> 
+  <tr>
     <td></td>
   </tr>
 </table>
@@ -39,10 +39,10 @@
   <tr>
     <td valign="top" colspan="3"> <a href="index.html"><img src="images/logo.gif" width="301" height="104" vspace="10" alt="EQ Atlas" align="left" border="0"></a></div></td>
   </tr>
-  <tr valign="top"> 
+  <tr valign="top">
     <td colspan="3">
       <div class="top-menu">
-        <a href="/">Home</a> | <span>Classic View</span>
+        <a href="/">Home</a> | <span>Ye Old Atlas</span>
       </div>
       <div class="top-menu">
         <a href="#antonica">Antonica</a> | <a href="#faydwer">Faydwer</a> | <a href="#odus">Odus</a>
@@ -51,18 +51,18 @@
       </div>
 
       <table cellspacing=20 border="1" width=90% align="center">
-        <tr> 
+        <tr>
           <th align=center colspan="4"><b><font color="#000000"><a name="antonica">ANTONICA</a></font></b></th>
         </tr>
-        <tr> 
-          <td align=center colspan="2" width=45%> 
+        <tr>
+          <td align=center colspan="2" width=45%>
             <p><b>Zone Connection Maps </b></p>
             <p><a href="eantonicamap.html"><font size="-1">East Antonica</font></a><font size="-1"><br>
               <a href="santonicamap.html">South Antonica</a><br>
               <a href="wantonicamap.html">West Antonica</a></font></p>
             <p>&nbsp;</p>
           </td>
-          <td align=center colspan="2" width=45%> 
+          <td align=center colspan="2" width=45%>
             <p><b>Cities</b></p>
             <p><a href="freeport.html"><font size="-1">Freeport</font></a><font size="-1"><br>
               <a href="grobb.html">Grobb</a><br>
@@ -75,12 +75,12 @@
               <a href="surefallglade.html">Surefall Glade</a> </font></p>
           </td>
         </tr>
-        <tr> 
-          <td align=center colspan=4> 
+        <tr>
+          <td align=center colspan=4>
             <p><b>Zones</b></p>
           </td>
         </tr>
-        <tr> 
+        <tr>
           <td align=center colspan=2><font size="-1"><a href="arena.html">The Arena</a><br>
             <a href="befallen.html">Befallen</a><br>
             <a href="blackburrow.html">Blackburrow</a><br>
@@ -118,25 +118,25 @@
             <a href="westcommons.html">West Commonlands<br></a>
             <a href="westernkarana.html">Western Plains of Karana</a> </font></td>
         </tr>
-        <tr> 
+        <tr>
           <th align=center colspan="2"><font color="#000000"><a name="odus">ODUS</a></font></th>
           <th align=center colspan=2><font color="#000000"><a name="faydwer">FAYDWER</a></font></th>
         </tr>
-        <tr> 
-          <td align=center height="72"> 
+        <tr>
+          <td align=center height="72">
             <p><b>Zone Connection Map</b></p>
             <p><a href="odusmap.html"><font size="-1">Odus</font></a> </p>
           </td>
-          <td align=center height="72"> 
+          <td align=center height="72">
             <p><b>Cities</b></p>
             <p><font size="-1"><a href="erudin.html">Erudin</a><br>
               <a href="paineel.html">Paineel </a></font></p>
           </td>
-          <td align=center height="72"> 
+          <td align=center height="72">
             <p><b>Zone Connection Map</b></p>
             <p><a href="faydwermap.html"><font size="-1">Faydwer</font></a></p>
           </td>
-          <td align=center height="72"> 
+          <td align=center height="72">
             <p><b>Cities </b></p>
             <p><font size="-1"><a href="felwithe.html">Felwithe</a><br>
               <a href="kelethin.html">Kelethin</a><br>
@@ -144,10 +144,10 @@
               <a href="akanon.html">Ak'Anon</a></font></p>
           </td>
         </tr>
-        <tr> 
-          <td align=center height="72" valign="top" colspan="2"> 
+        <tr>
+          <td align=center height="72" valign="top" colspan="2">
             <p><b>Zones</b></p>
-            <p><a href="erudscrossing.html"><font size="-1">Erud's Crossing</font></a> 
+            <p><a href="erudscrossing.html"><font size="-1">Erud's Crossing</font></a>
               <font size="-1"><br>
               <a href="kerraisle.html">Kerra Island</a><br>
               <a href="stonebruntmtns.html">Stonebrunt Mountains</a><br>
@@ -156,7 +156,7 @@
               <a href="warrens.html">The Warrens<br>
               </a> </font></p>
           </td>
-          <td align=center height="72" valign="top" colspan="2"> 
+          <td align=center height="72" valign="top" colspan="2">
             <p><b>Zones</b></p>
             <p><a href="butcherblock.html"><font size="-1">Butcherblock Mountains</font></a><font size="-1"><br>
               <a href="mistmoore.html">Castle Mistmoore</a><br>
@@ -170,27 +170,27 @@
               <a href="steamfont.html">Steamfont Mountains</a></font></p>
           </td>
         </tr>
-        <tr> 
+        <tr>
           <th align=center colspan="4"><b><font color="#000000"><a name="kunark">KUNARK</a></font></b></th>
         </tr>
-        <tr> 
-          <td align=center colspan="2"> 
+        <tr>
+          <td align=center colspan="2">
             <p><b>Zone Connection Maps </b></p>
             <p><font size="-1"><a href="kunarkzones.html">Kunark</a></font></p>
           </td>
-          <td align=center colspan="2"> 
+          <td align=center colspan="2">
             <p><b>Cities</b></p>
             <p><font size="-1"><a href="cabilis.html">Cabilis</a></font></p>
           </td>
         </tr>
-        <tr> 
-          <td align=center colspan=4> 
+        <tr>
+          <td align=center colspan=4>
             <p><b>Zones</b></p>
           </td>
         </tr>
-        <tr> 
-          <td align=center colspan=2> 
-            <p><font size="-1"><a href="burningwood.html">Burning Wood</a> 
+        <tr>
+          <td align=center colspan=2>
+            <p><font size="-1"><a href="burningwood.html">Burning Wood</a>
               <br>
               <a href="chardok.html">Chardok</a><br>
               <a href="cityofmist.html">City of Mist</a><br>
@@ -204,7 +204,7 @@
               <a href="kaesora.html">Kaesora</a><br>
               <a href="karnorscastle.html">Karnor's Castle </a></font></p>
           </td>
-          <td align=center colspan=2><font size="-1"><a href="kurnstower.html">Kurn's 
+          <td align=center colspan=2><font size="-1"><a href="kurnstower.html">Kurn's
             Tower</a> <a href="lakeofillomen.html"><br>
             Lake of Ill Omen</a><br>
             <a href="minesofnurga.html">Mines of Nurga</a><br>
@@ -218,15 +218,15 @@
             <a href="veeshanspeak.html">Veeshan's Peak</a><br>
             <a href="warslikswoods.html">Warsliks Woods</a></font></td>
         </tr>
-        <tr> 
+        <tr>
           <th align=center colspan="4"><b><font color="#000000"><a name="velious">VELIOUS</a></font></b></th>
         </tr>
-        <tr> 
-          <td align=center colspan="2"> 
+        <tr>
+          <td align=center colspan="2">
             <p><b>Zone Connection Maps </b></p>
             <p><font size="-1"><a href="veliousmap.html">Velious</a></font></p>
           </td>
-          <td align=center colspan="2"> 
+          <td align=center colspan="2">
             <p><b>Cities</b></p>
             <p><font size="-1"><a href="icewellkeep.html">Icewell Keep</a><br>
               <a href="kaeldrakkal.html">Kael Drakkal</a><br>
@@ -234,14 +234,14 @@
               <a href="thurgadin.html">Thurgadin</a></font></p>
           </td>
         </tr>
-        <tr> 
-          <td align=center colspan=4> 
+        <tr>
+          <td align=center colspan=4>
             <p><b>Zones</b></p>
           </td>
         </tr>
-        <tr> 
-          <td align=center colspan=2> 
-            <p><font size="-1"><a href="cobaltscar.html">Cobalt Scar</a> 
+        <tr>
+          <td align=center colspan=2>
+            <p><font size="-1"><a href="cobaltscar.html">Cobalt Scar</a>
               <br>
               <a href="crystalcaverns.html">Crystal Caverns</a><br>
               <a href="dragonnecropolis.html">Dragon Necropolis</a><br>
@@ -257,15 +257,15 @@
             <a href="wakeningland.html">Wakening Land</a><br>
             <a href="westernwastes.html">Western Wastes</a></font></td>
         </tr>
-        <tr> 
+        <tr>
           <th align=center colspan="4"><b><font color="#000000"><a name="luclin">LUCLIN</a></font></b></th>
         </tr>
-        <tr> 
-          <td align=center colspan="2"> 
+        <tr>
+          <td align=center colspan="2">
             <p><b>Zone Connection Maps </b></p>
             <p><font size="-1"><a href="luclinzones.html">Luclin</a></font></p>
           </td>
-          <td align=center colspan="2"> 
+          <td align=center colspan="2">
             <p><b>Cities</b></p>
             <p><font size="-1"> <a href="bazaar.html">The Bazaar</a><br>
               <a href="kattacastellum.html">Katta Castellum</a><br>
@@ -275,13 +275,13 @@
               <a href="sharvahl.html">Shar Vahl</a></font></p>
           </td>
         </tr>
-        <tr> 
-          <td align=center colspan=4> 
+        <tr>
+          <td align=center colspan=4>
             <p><b>Zones</b></p>
           </td>
         </tr>
-        <tr> 
-          <td align=center colspan=2> 
+        <tr>
+          <td align=center colspan=2>
             <p><font size="-1"><a href="acryliacaverns.html">Acrylia Caverns</a><br>
               <a href="akhevaruins.html">Akheva Ruins</a><br>
               <a href="dawnshroudpeaks.html">Dawnshroud Peaks</a><br>
@@ -294,7 +294,7 @@
               <a href="hollowshademoor.html">Hollowshade Moor</a><br>
               <a href="maidenseye.html">Maiden's Eye</a></font></p>
           </td>
-          <td align=center colspan=2><font size="-1"><a href="marusseru.html">Marus 
+          <td align=center colspan=2><font size="-1"><a href="marusseru.html">Marus
             Seru</a><br>
             <a href="monsletalis.html">Mons Letalis</a><br>
             <a href="netherbianlair.html">Netherbian Lair</a><br>
@@ -307,11 +307,11 @@
             <a href="umbralplains.html">Umbral Plains</a><br>
             <a href="vexthal.html">Vex Thal</a></font></td>
         </tr>
-        <tr> 
+        <tr>
           <td align=center colspan=4><b><a name="planes">PLANES</a></b></td>
         </tr>
-        <tr> 
-          <td align=center colspan=2> 
+        <tr>
+          <td align=center colspan=2>
             <p><font size="-1"><a href="planeofskymap.html">Plane of Sky</a><br>
               <a href="planeoffearmap.html">Plane of Fear</a><br>
               <a href="planeofgrowthmap.html">Plane of Growth</a></font></p>
@@ -319,10 +319,10 @@
           <td align=center colspan=2><font size="-1"><a href="planeofhatemap.html">Plane of Hate</a><br>
             <a href="images/planeofmischief.gif">Plane of Mischief</font></td>
         </tr>
-        <tr> 
+        <tr>
           <td align=center colspan=4><b>PLANES OF POWER</b></td>
         </tr>
-        <tr> 
+        <tr>
           <td align=center colspan=2 valign="top"><font size="-1"><a href="bastionofthundermap.html">Bastion of Thunder</a><br>
             <a href="lairofterristhulemap.html">Crypt of Terris Thule</a> (a.k.a. Plane of Nightmare B)<br>
             <a href="burninglandsmap.html">Doomfire, the Burning Lands</a> (a.k.a. Plane of Fire)<br>
@@ -362,15 +362,13 @@
 <br /><br /><hr><br /><br />
 <h1><a name=notes>Notes</a></h1>
 <br />
-<br />View Source: <a href="https://github.com/race/eqatlas" target="_blank">https://github.com/race/eqatlas</a>
+<br />View Source: <a href="https://github.com/EQAtlas/eqatlas" target="_blank">https://github.com/EQAtlas/eqatlas</a>
 <br />Original mirror from: <a href="https://github.com/ebabel-eu/eqatlas" target="_blank">https://github.com/ebabel-eu/eqatlas</a>
 <br /><br />
-<br />Issue Management: <a href="https://waffle.io/race/eqatlas" target="_blank">https://waffle.io/race/eqatlas</a>
-<br /><br />
-- Sacraxiles @ P99
+- Sacraxiles & Serynn @ P99
 <br /><br /><br /><br />
 </font>
-	
+
 	</td>
   </tr>
 </table>
